Preserve deterministic profile mode ordering (#139)